Add Netlify frontend URL to CORS allowed origins